--- a/ic-projects/dkeeper/package.json
+++ b/ic-projects/dkeeper/package.json
@@ -34,9 +34,9 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "util": "0.12.4",
-    "webpack": "5.69.1",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "^4.4.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "browserslist": [
     "last 2 chrome version",
