--- a/ic-projects/token/package.json
+++ b/ic-projects/token/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@dfinity/agent": "0.10.3",
     "@dfinity/candid": "0.10.3",
-    "@dfinity/principal": "^0.10.3",
+    "@dfinity/principal": "0.10.3",
     "@material-ui/core": "4.6.1",
     "@material-ui/icons": "4.5.1",
     "assert": "2.0.0",
@@ -34,25 +34,25 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "util": "0.12.4",
-    "webpack": "^5.88.2",
+    "webpack": "5.69.1",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "^4.4.0"
-  },
-  "browserslist": [
+},
+"browserslist": [
     "last 2 chrome version",
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ],
-  "dependencies": {
+],
+"dependencies": {
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-scripts": "5.0.0",
     "@dfinity/auth-client": "^0.10.3",
     "@dfinity/authentication": "^0.10.3",
     "@dfinity/identity": "^0.10.3",
     "lit-html": "^1.4.1",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-scripts": "^2.1.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5"
-  }
+}
 }
