--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Logs
 logs
 *.log
@@ -9,6 +8,9 @@ lerna-debug.log*s
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+.DS_Store
+**/.DS_Store
 
 # Runtime data
 pids
